force-app/main/default/objects/dupcheck__dcGroup__c/dupcheck__dcGroup__c.object-meta.xml
<CustomObject>
    <label>Plauti Deduplicate Group</label>
    <nameField>
        <displayFormat>GRP{000000}</displayFormat>
        <label>Plauti Deduplicate Group</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plauti Deduplicate Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>