force-app/main/default/objects/dupcheck__dcGroup__c/fields/dupcheck__duplicateFilterValue__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__duplicateFilterValue__c</fullName>
    <externalId>true</externalId>
    <label>Duplicate Filter Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>