force-app/main/default/objects/dupcheck__dcGroup__c/fields/dupcheck__duplicateRecordType__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__duplicateRecordType__c</fullName>
    <externalId>true</externalId>
    <label>Duplicate Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>