force-app/main/default/objects/dupcheck__dcGroup__c/fields/dupcheck__MasterRecord__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__MasterRecord__c</fullName>
    <label>Master Record</label>
    <length>18</length>
    <type>Text</type>
</CustomField>