force-app/main/default/objects/dupcheck__dcGroup__c/fields/dupcheck__mergeData__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__mergeData__c</fullName>
    <label>Merge Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>